@@ -33,8 +33,16 @@ import time, copy
 # There seem to be some initialization problems with mod_pythan as the sys.path
 # is correct when excuting python from the command line as site user.
 # Try to workaround the problem now...
+
 import site, sys
-sys.path.extend(site.getsitepackages())
+try:
+    sys.path.extend(site.getsitepackages())
+except: # Workaround, python 2.6 ( debian squeeze ) 
+    sys.path.extend(["/usr/local/lib/python2.6/dist-packages"])
+    sys.path.extend(["/usr/lib/python2.6/dist-packages"])
+    pass
+
+
 
 try:
     # docs: http://www.python-ldap.org/doc/html/index.html
