@@ -35,6 +35,8 @@
     * FIX: apache_status: fixed bug with missing 'url', wrote man page
     * Add: flexible notifcations: filter by hostname
     * FIX: fixed missing localisation in check_parameteres.py 
+    * FIX: userdb/ldap.py: fixed invalid call site.getsitepackages() for python 2.6
+
 
     Multisite:
     * Implemented LDAP integration of Multisite. You can now authenticate your
